k8s/10_apps/06_n8n/kustomize/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.1.200
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`n8n.local.naguiar.dev`) || Host(`n8n.naguiar.dev`)
      kind: Rule
      services:
        - name: n8n
          port: 5687
  tls:
    secretName: certificate-tls
